2011-09-13	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Support GraphViz documentation.

2011-08-25	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Utilities for verifing number of arguments.
	* Additional utilities.

2011-07-24	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Append rather than replace gem spec file members.
	* Allow in_path error blocks to return a value.

2011-04-22	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Fix homepage specification.
	* Fix version handling and other issues.

2011-04-19	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Refactor together with Codnar-0-1-62.

2011-04-17	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Fix gem installation problem.
	* Exclude tests from RDoc documentation.
	* Fix commit process.
	* Refactor out of Codnar.

2011-04-14	Oren Ben-Kiki <github-oren@ben-kiki.org>

	* Initial empty repository
