@@ -1,3 +1,7 @@
+2012-01-07	Oren Ben-Kiki <github-oren@ben-kiki.org>
+
+	* Add default configurations for Haskell code.
+
 2011-09-13	Oren Ben-Kiki <github-oren@ben-kiki.org>
 
 	* Support GraphViz documentation.
